// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Modal
    className="foo"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="text-container-width w100 bg-white card drop-shadow p3 transition-slide-up-large-long"
/>,
<<<<<<< HEAD
<<<<<<< HEAD
      "className": "fixed-cover bg-white-wash flex justify-center items-center transition-fade-in foo",
=======
      "className": "foo fixed-cover bg-white-wash flex justify-center items-center transition-fade-in px3",
>>>>>>> Fix event selector corresponding to change
=======
      "className": "fixed-cover bg-white-wash flex justify-center items-center transition-fade-in foo",
>>>>>>> fix DatesAndTimes key to be lower case
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "text-container-width w100 bg-white card drop-shadow p3 transition-slide-up-large-long",
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="text-container-width w100 bg-white card drop-shadow p3 transition-slide-up-large-long"
/>,
<<<<<<< HEAD
<<<<<<< HEAD
        "className": "fixed-cover bg-white-wash flex justify-center items-center transition-fade-in foo",
=======
        "className": "foo fixed-cover bg-white-wash flex justify-center items-center transition-fade-in px3",
>>>>>>> Fix event selector corresponding to change
=======
        "className": "fixed-cover bg-white-wash flex justify-center items-center transition-fade-in foo",
>>>>>>> fix DatesAndTimes key to be lower case
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "text-container-width w100 bg-white card drop-shadow p3 transition-slide-up-large-long",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Modal />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="text-container-width w100 bg-white card drop-shadow p3 transition-slide-up-large-long"
/>,
      "className": "fixed-cover bg-white-wash flex justify-center items-center transition-fade-in",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": undefined,
        "className": "text-container-width w100 bg-white card drop-shadow p3 transition-slide-up-large-long",
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="text-container-width w100 bg-white card drop-shadow p3 transition-slide-up-large-long"
/>,
        "className": "fixed-cover bg-white-wash flex justify-center items-center transition-fade-in",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "text-container-width w100 bg-white card drop-shadow p3 transition-slide-up-large-long",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
